# rust-playground

./: README.md
dioxus_app_0/: Cargo.toml  Dioxus.toml
dioxus_app_0/src/: main.rs
rust_fortune_teller/: .env.sample  Cargo.toml  README.md
rust_fortune_teller/src/: main.rs
uuid_v4_generator/: docker-compose.yml
uuid_v4_generator/backend/: .env.sample  Cargo.toml  Dockerfile
uuid_v4_generator/backend/src/: main.rs
uuid_v4_generator/frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
uuid_v4_generator/frontend/src/: App.vue
