[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["hungdang@vsec.com.vn"]

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
chrono = "0.4.40"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
num_cpus = "1.16.0"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
